i think i fixed the centering on mobile. otherwise i was gonna purposefully align it to the right, or something crazy.

--- a/css/index.css
+++ b/css/index.css
@@ -16,9 +16,6 @@ body {
   transform: translate(-50%,-50%);
   text-align: center;
   font-size: calc(5px + 3.5vw);
-  width: calc(25px + 25vw);
-  padding-left: calc(1vw + 1vh);
-  padding-right: calc(1vw + 1vh);
 }
 
 p {
